# PolyForge

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  QUICK_START.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
dashboard/: app.py  components.py
docs/: AGENTS.md  API_INTEGRATIONS.md  ARCHITECTURE.md  BACKTESTING_AND_SIMULATION.md  DASHBOARD.md  DEPLOYMENT_AND_OPERATIONS.md  EXECUTION.md  RISK_MANAGEMENT.md  ROADMAP.md  SECURITY.md  STRATEGIES.md
scripts/: backup_db.sh  security_audit.sh  start_prod.sh
src/: main.py
src/agents/: graph.py  nodes.py  prompts.py  state.py  tools.py
src/backtesting/: advanced_backtester.py  backtester.py  optimizer.py
src/core/: config.py  logging.py  models.py  portfolio.py  utils.py
src/execution/: executor.py  order_builder.py
src/monitoring/: alerts.py  dashboard_server.py  healthcheck.py  logger.py
src/orchestration/: orchestrator.py  scheduler.py
src/risk/: risk_engine.py
src/security/: audit_logger.py  secrets_manager.py  wallet_manager.py
src/strategies/: scanner.py  strategy_evaluator.py
src/testing/: system_tester.py  validation.py
src/utils/: logging.py
tests/: conftest.py  test_agents.py  test_backtesting.py  test_config.py  test_execution.py  test_orchestrator.py  test_risk.py  test_scanner.py
