[project]
name = "polyforge"
version = "0.1.0"
description = "Hybrid intelligent Polymarket trading system (AI + copy-trading + MM + arb) with risk-first design."
requires-python = ">=3.11"
readme = "README.md"
license = { text = "Proprietary" }

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
no_implicit_optional = true
